<resources>
    <string name="app_name">E-Library</string>
    <string name="title_activity_menu">Menu_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="OPAC">OPAC</string>
    <string name="menu_Support">Support</string>
    <string name="menu_Contact">Contact</string>
    <string name="menu_FAQs">FAQs</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_admin_login">AdminLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_admin_menu">admin_menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_admin">AdminActivity</string>

    <string name="nav_open">Open</string>

    <string name="nav_close">Close</string>
    <string-array name="borrowsearch">
        <item>Book ID</item>
        <item>Book Name</item>
        <item>Roll No</item>
    </string-array>
</resources>