<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_opac"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/OPAC" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_support_24"
            android:title="@string/menu_Support" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_baseline_question_answer_24"
            android:title="@string/menu_FAQs" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contact_mail_24"
            android:title="@string/menu_Contact" />
    </group>
</menu>