<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.library_automation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_opac"
        android:name="com.example.library_automation.Opac"
        android:label="@string/OPAC"
        tools:layout="@layout/activity_opac" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.library_automation.ui.support.SupportFragment"
        android:label="@string/menu_Support"
        tools:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/nav_faqs"
        android:name="com.example.library_automation.ui.faqs.FaqsFragment"
        android:label="@string/menu_FAQs"
        tools:layout="@layout/fragment_faqs" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.library_automation.ui.contact.ContactFragment"
        android:label="@string/menu_Contact"
        tools:layout="@layout/fragment_contact" />
</navigation>